--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.2",
     "@google/generative-ai": "^0.21.0",
+    "@ngrx/effects": "^18.1.1",
+    "@ngrx/store": "^18.1.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
